--- a/frontend/Sexual_Harrasment_Prevention_Cell/package.json
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "mim":"vite --host"
+    "mim": "vite --host"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@react-pdf/renderer": "^3.4.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
