--- a/frontend/Sexual_Harrasment_Prevention_Cell/package.json
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "mim": "vite --host"
+    "shppc": "vite --host"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
