--- a/frontend/Sexual_Harrasment_Prevention_Cell/package.json
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/package.json
@@ -19,6 +19,11 @@
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
@@ -27,7 +32,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "moment": "^2.30.1",
     "postcss": "^8.4.35",
+    "react-datetime": "^3.2.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
